--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ html, body {
   padding: 0;
 }
 
+p {
+  width: 80%;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -59,6 +63,8 @@ ul {
 .todo-container {
   padding: 20px;
   border-bottom: 1px solid #333;
+  display: flex;
+  flex-direction: row;
 }
 
 .todo-container:first-of-type {
